--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -1,3 +1,7 @@
+/* Importando */
+@import url(../fonts/flaticon-2/flaticon.css);
+@import url(../fonts/icones/flaticon.css);
+
 /* Negrito */
 .negrito {
   font-weight: bold;
@@ -18,6 +22,10 @@ body {
   color: #0960aa;
 }
 /* Bgs */
+
+.bg-cinza {
+  background: #f2eded !important;
+}
 .bg-primario {
   background: #0960aa !important;
 }
@@ -35,7 +43,38 @@ body {
   ) !important;
 }
 
-/* Fundo */
+/* Carousel */
+.lide-one-item {
+  height: 700px;
+}
+.slider-photo {
+  height: 700px !important;
+  width: 100% !important;
+  background-image: -webkit-gradient(
+      linear,
+      right top,
+      left bottom,
+      from(#00000071),
+      to(#00000071)
+    ),
+    url(../img/banner/slider.jpg);
+  background-size: 100% 90%;
+  background-position: bottom;
+}
+.slider-photo-2 {
+  height: 700px !important;
+  width: 100% !important;
+  background-image: -webkit-gradient(
+      linear,
+      right top,
+      left bottom,
+      from(#00000071),
+      to(#00000071)
+    ),
+    url(../img/banner/slider-2.jpg);
+  background-size: 100% 90%;
+  background-position: bottom;
+}
 .banner {
   height: 700px;
   /* background-position: center; */
@@ -48,7 +87,7 @@ body {
       from(#00000071),
       to(#00000071)
     ),
-    url(../img/BANNER_FALEMAIS.jpg);
+    url(../img/banner/slider.jpg);
   background-attachment: fixed;
 }
 .banner .content {
