--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ h5,
 }
 .btn.btn-outline-white:hover {
   background: #fff;
-  color: #32dbc6 !important;
+  color: #0960aa !important;
 }
 .btn.btn-md {
   padding: 15px 30px;
@@ -136,7 +136,7 @@ h5,
 }
 .form-control:active,
 .form-control:focus {
-  border-color: #32dbc6;
+  border-color: #0960aa;
 }
 .form-control:hover,
 .form-control:active,
@@ -345,7 +345,7 @@ h5,
   color: #8bc34a;
 }
 .ul-check.primary li:before {
-  color: #32dbc6;
+  color: #0960aa;
 }
 
 .select-wrap,
@@ -394,7 +394,7 @@ h5,
   margin-bottom: 0;
 }
 .site-navbar .site-navigation .site-menu .active {
-  color: #32dbc6;
+  color: #0960aa;
   display: inline-block;
   padding: 5px 20px;
 }
@@ -412,7 +412,7 @@ h5,
   text-decoration: none !important;
 }
 .site-navbar .site-navigation .site-menu > li > a:hover {
-  color: #32dbc6;
+  color: #0960aa;
 }
 .site-navbar .site-navigation .site-menu .has-children {
   position: relative;
@@ -438,7 +438,7 @@ h5,
   top: 100%;
   position: absolute;
   text-align: left;
-  border-top: 2px solid #32dbc6;
+  border-top: 2px solid #0960aa;
   -webkit-box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px -2px rgba(0, 0, 0, 0.1);
   border-left: 1px solid #edf0f5;
@@ -488,7 +488,7 @@ h5,
   color: #343a40;
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown .active > a {
-  color: #32dbc6 !important;
+  color: #0960aa !important;
 }
 .site-navbar .site-navigation .site-menu .has-children .dropdown > li {
   list-style: none;
@@ -564,7 +564,7 @@ h5,
 .site-navbar .site-navigation .site-menu .has-children:hover > a,
 .site-navbar .site-navigation .site-menu .has-children:focus > a,
 .site-navbar .site-navigation .site-menu .has-children:active > a {
-  color: #32dbc6;
+  color: #0960aa;
 }
 .site-navbar .site-navigation .site-menu .has-children:hover,
 .site-navbar .site-navigation .site-menu .has-children:focus,
@@ -664,14 +664,14 @@ h5,
   color: #212529;
 }
 .site-mobile-menu .site-nav-wrap a:hover {
-  color: #32dbc6;
+  color: #0960aa;
 }
 .site-mobile-menu .site-nav-wrap li {
   position: relative;
   display: block;
 }
 .site-mobile-menu .site-nav-wrap li .active {
-  color: #32dbc6;
+  color: #0960aa;
 }
 .site-mobile-menu .site-nav-wrap .arrow-collapse {
   position: absolute;
@@ -1185,7 +1185,7 @@ h5,
 }
 .site-block-tab .nav-item > a:hover,
 .site-block-tab .nav-item > a.active {
-  border-bottom: 2px solid #32dbc6;
+  border-bottom: 2px solid #0960aa;
   color: #000;
 }
 
@@ -1306,7 +1306,7 @@ h5,
   background: #dee2e6;
 }
 .slide-one-item .owl-dots .owl-dot.active span {
-  background: #32dbc6;
+  background: #0960aa;
 }
 
 .block-12 {
@@ -1406,7 +1406,7 @@ h5,
   width: 80px;
   height: 4px;
   margin-top: -4px;
-  background: #32dbc6;
+  background: #0960aa;
   top: 0;
 }
 .block-12 .text .text-inner .heading {
@@ -1432,7 +1432,7 @@ h5,
   display: block;
   border-radius: 50%;
   opacity: 1;
-  color: #32dbc6 !important;
+  color: #0960aa !important;
 }
 .block-16 figure .play-button:hover {
   opacity: 1;
@@ -1478,7 +1478,7 @@ h5,
 }
 
 .block-25 ul li a .meta {
-  color: #32dbc6;
+  color: #0960aa;
 }
 
 .block-25 ul li a:hover img {
@@ -1515,7 +1515,7 @@ h5,
   position: absolute;
   width: 30px;
   height: 30px;
-  background: #32dbc6;
+  background: #0960aa;
   border-radius: 50%;
   color: #fff;
 }
@@ -1560,7 +1560,7 @@ h5,
 }
 .site-block-27 ul li.active a,
 .site-block-27 ul li.active span {
-  background: #32dbc6;
+  background: #0960aa;
   color: #fff;
   border: 1px solid transparent;
 }
@@ -1725,7 +1725,7 @@ h5,
 .feature-1,
 .free-quote,
 .feature-3 {
-  background: #32dbc6;
+  background: #0960aa;
   padding: 30px 50px;
   color: rgba(255, 255, 255, 0.6);
   font-size: 15px;
@@ -1814,7 +1814,7 @@ h5,
   bottom: 0;
   width: 80px;
   height: 3px;
-  background: #32dbc6;
+  background: #0960aa;
 }
 .border-primary.text-center:after {
   left: 50%;
@@ -1829,7 +1829,8 @@ h5,
 }
 
 .testimonial {
-  max-width: 800px;
+  width: 100%;
+  height: 100%;
   margin: 0 auto !important;
   text-align: center;
 }
@@ -1856,7 +1857,7 @@ h5,
 .how-it-work-item .number {
   width: 50px;
   height: 50px;
-  background: #32dbc6;
+  background: #0960aa;
   color: #fff;
   line-height: 55px;
   font-weight: 300;
@@ -1922,7 +1923,7 @@ h5,
   line-height: 40px;
   border-radius: 50%;
   display: inline-block;
-  background: #32dbc6;
+  background: #0960aa;
   color: #fff;
 }
 
@@ -1996,7 +1997,7 @@ h5,
   transition: 0.1s all ease;
 }
 .popular-category:hover {
-  background: #32dbc6;
+  background: #0960aa;
   -webkit-box-shadow: 0 5px 30px -5px rgba(50, 219, 198, 0.5);
   box-shadow: 0 5px 30px -5px rgba(50, 219, 198, 0.5);
 }
@@ -2058,7 +2059,7 @@ h5,
   font-size: 12px;
   display: inline-block;
   padding: 5px 30px;
-  background: #32dbc6;
+  background: #0960aa;
   border-radius: 30px;
   color: #fff;
   letter-spacing: 0.2em;
@@ -2106,7 +2107,7 @@ h5,
 }
 
 .accordion-item[aria-expanded="true"] {
-  color: #32dbc6;
+  color: #0960aa;
 }
 
 .social-media {
@@ -2149,7 +2150,7 @@ h5,
   display: inline-block;
   width: 50px;
   height: 50px;
-  background: #32dbc6;
+  background: #0960aa;
   margin-right: 1.5rem;
   border-radius: 50%;
   line-height: 50px;
