--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -4,11 +4,18 @@
  * Licensed under MIT (https://github.com/PedroMakengo)
  */
 
-/* Body */
-body {
-  background: #f5f5f5 !important;
+ /* Importação */
+@font-face {
+  font-family: "Angola";
+  src: url(../fonts/PT_Sans/PTSans-Regular.ttf);
 }
 
+
+/* Body */
+body {
+  font-family: "Angola";
+  background: #f5f5f5 !important;
+}
 /* =================================== SELECTORES UNIVERSAIS =================================== */
 /*!
  * Aqui eu tenho todos os selectores personalizados que pertencem aplicação
@@ -19,7 +26,7 @@ body {
  
  /* Container */
 .container {
-  width: 70%;
+  width: 75%;
 }
 
 @media(max-width: 770px) {
@@ -85,6 +92,7 @@ body {
 
 /* Margens */
 .mt-10 {margin-top: 10px}
+.mt--10 {margin-top: -10px;}
 .mt-20 {margin-top: 20px}
 .mt-30 {margin-top: 30px}
 .mt-40 {margin-top: 40px}
@@ -93,17 +101,25 @@ body {
 .mt-70 {margin-top: 70px}
 .mt-100 {margin-top: 100px}
 .mt-120 {margin-top: 120px}
-.mt-150 {margin-top: 150px;}
+.mt-150 {margin-top: 150px !important;}
 
 /* Padding */
-.pb-60 {
-  padding-bottom: 60px !important;
-}
-
+.pb-60 {padding-bottom: 60px !important}
+.pb-70 {padding-bottom: 70px !important}
 
 /* Border */
 .border-0 , .roudend-0{
   border-radius: 0px !important;
+}
+.borda-top {
+  border-top: 3px solid #0960aa;
+  width: 10%;
+  float: left;
+}
+.borda-top-white {
+  border-top: 3px solid #fff;
+  width: 10%;
+  float: left;
 }
 
 /* =================================== END SELECTORES UNIVERSAIS =================================== */
@@ -120,6 +136,7 @@ body {
  * Desenvolvedor : Pedro Makengo
  * Empresa : Codebenhid
  */
+
 /* Carousel */
 .lide-one-item {
   height: 700px;
@@ -229,4 +246,58 @@ body {
       to(#000000c9)
     ),
     url(../img/fibra.jpg);
+}
+
+
+
+/* ========================================== PÁGINA SOBRE ==========================================  */
+/*!
+ * Aqui eu tenho todos os selectores personalizados da página index.html
+ * Aplicação : Angola Telecom 
+ * Página sendo estilizado : Sobre.html
+ * Desenvolvedor : Pedro Makengo
+ * Empresa : Codebenhid
+ */
+
+
+
+ .valores .valor {
+  height: 230px;
+ }
+ .valor-1 {
+   background-image:-webkit-gradient(
+    linear,
+    right top,
+    left bottom,
+    from(#00000071),
+    to(#00000071)
+  ),url(../img/banner/v1-1.jpg);
+   background-size: cover;
+ }
+ .estatistica-sobre {
+   background-image: -webkit-gradient(
+    linear,
+    right top,
+    left bottom,
+    from(#32dbc78e),
+    to(#0960aa)
+  ),url(../img/banner/v1-1.jpg);
+  background-size: cover;
+ }
+
+/* ========================================== END PÁGINA SOBRE ==========================================  */
+
+
+/* TELINFORMA */
+.banner-telinforma {
+  background-attachment: fixed;
+  background-image: -webkit-gradient(
+    linear,
+    right top,
+    left bottom,
+    from(#0000008e),
+    to(#0000008e)
+  ),url(../img/banner/v1-1.jpg);
+  background-size: cover;
+  background-position: center;
 }
