--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -97,11 +97,15 @@ body {
 .mt-20 {margin-top: 20px}
 .mt-30 {margin-top: 30px}
 .mt-40 {margin-top: 40px}
+.mt-49 {margin-top: 49px}
 .mt-50 {margin-top: 50px}
 .mt-60 {margin-top: 60px}
 .mt-70 {margin-top: 70px}
 .mt-100 {margin-top: 100px}
-.mt-120 {margin-top: 120px}
+.mt-110 {margin-top: 100px !important}
+.mt-120 {margin-top: 120px !important}
+.mt-130 {margin-top: 130px !important}
+.mt-140 {margin-top: 140px !important;}
 .mt-150 {margin-top: 150px !important;}
 
 /* Padding */
