--- a/assets/css/demo.css
+++ b/assets/css/demo.css
@@ -15,6 +15,11 @@ body {
   font-family: "Angola-Telecom" !important;
   background: #f5f5f5 !important;
 }
+body::-webkit-scrollbar {
+  background: #0960aa !important;
+    width: 5px !important;
+    border-radius: 12px !important;
+}
 /* =================================== SELECTORES UNIVERSAIS =================================== */
 /*!
  * Aqui eu tenho todos os selectores personalizados que pertencem aplicação
